--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Admin Layout</title>
+  <title>Go Survey</title>
 
-  <!-- Bootstrap & Icons (CDN) -->
+  <!-- Bootstrap 5 + Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- 編譯後的 CSS -->
+  <!-- 編譯後的 CSS（由下方 SCSS 產生） -->
   <link rel="stylesheet" href="css/public.css">
 </head>
 <body>
@@ -28,21 +28,16 @@
 
       <nav class="menu pt-2">
         <ul class="list-unstyled mb-0">
-          <!-- 1. 不可點擊 -->
           <li class="nav-item is-disabled">
             <a class="nav-link" href="javascript:;" tabindex="-1" aria-disabled="true" data-bs-toggle="tooltip" title="儀表板（不可點）">
               <i class="bi bi-grid-1x2"></i><span class="label">儀表板</span>
             </a>
           </li>
-
-          <!-- 2. 目前頁（active） -->
           <li class="nav-item is-active">
             <a class="nav-link" href="#" data-bs-toggle="tooltip" title="專案與活動管理">
               <i class="bi bi-folder2"></i><span class="label">專案與活動管理</span>
             </a>
           </li>
-
-          <!-- 3 ~ 5. 一般項目 -->
           <li class="nav-item">
             <a class="nav-link" href="#" data-bs-toggle="tooltip" title="內容與媒體管理">
               <i class="bi bi-file-earmark-text"></i><span class="label">內容與媒體管理</span>
@@ -58,8 +53,6 @@
               <i class="bi bi-graph-up"></i><span class="label">數據分析與報表管理</span>
             </a>
           </li>
-
-          <!-- 6. 不可點擊 -->
           <li class="nav-item is-disabled">
             <a class="nav-link" href="javascript:;" tabindex="-1" aria-disabled="true" data-bs-toggle="tooltip" title="系統與 API 管理（不可點）">
               <i class="bi bi-gear"></i><span class="label">系統與 API 管理</span>
@@ -69,11 +62,15 @@
       </nav>
     </aside>
 
-    <!-- 右側主區 -->
+    <!-- 主區 -->
     <main class="content">
       <header class="topbar d-flex justify-content-end align-items-center px-3">
         <div class="d-flex align-items-center gap-3">
-          <a href="#" class="text-decoration-none text-body"><i class="bi bi-bell"></i><span class="visually-hidden">通知</span></a>
+          <!-- 通知鈴鐺：點擊開啟抽屜 -->
+          <a href="#" class="text-decoration-none text-body position-relative js-open-notif" aria-label="通知中心">
+            <i class="bi bi-bell fs-5"></i>
+            <span class="notif-count position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">5</span>
+          </a>
           <div class="d-flex align-items-center gap-2">
             <i class="bi bi-person-circle"></i>
             <span>林小玲 Alma Lin</span>
@@ -92,11 +89,140 @@
     </main>
   </div>
 
-  <!-- jQuery + Bootstrap JS -->
+  <!-- 通知抽屜：寬 450px -->
+  <div class="notif-backdrop" id="notifBackdrop" hidden></div>
+
+  <aside class="notif-drawer" id="notifDrawer" role="dialog" aria-label="通知中心" aria-hidden="true">
+    <div class="notif-header d-flex align-items-center justify-content-between px-3 py-2">
+      <div class="d-flex align-items-center gap-2">
+        <i class="bi bi-bell-fill"></i>
+        <strong>通知中心</strong>
+        <span class="badge bg-danger js-unread-badge">5 則未讀</span>
+      </div>
+      <button class="btn btn-sm btn-outline-light text-white js-close-notif" aria-label="關閉">
+        <i class="bi bi-x-lg"></i>
+      </button>
+    </div>
+
+    <div class="px-3 py-2">
+      <button class="btn btn-primary w-100 js-mark-all">全部標示為已讀</button>
+    </div>
+
+    <div class="notif-list px-3 pb-3">
+      <!-- 1 專案更新（未讀） -->
+      <article class="notif-item is-unread">
+        <div class="d-flex align-items-start gap-2">
+          <i class="bi bi-kanban fs-5 text-primary"></i>
+          <div class="flex-grow-1">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="mb-1">專案狀態更新</h6>
+              <small class="text-muted">2 小時前</small>
+            </div>
+            <p class="mb-2 text-muted">客戶滿意度調查 Q4 2024</p>
+            <div class="d-flex align-items-center gap-2 mb-2">
+              <small class="text-muted">進度：85%</small>
+              <div class="progress flex-grow-1" style="height:6px;">
+                <div class="progress-bar" role="progressbar" style="width:85%;"></div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-end">
+              <span class="badge bg-danger-subtle text-danger border">剩餘 1 天</span>
+            </div>
+          </div>
+        </div>
+        <button class="btn btn-sm btn-link text-decoration-none js-mark-read">
+          <i class="bi bi-check2-circle"></i> 標示已讀
+        </button>
+      </article>
+
+      <!-- 2 專案更新（未讀） -->
+      <article class="notif-item is-unread">
+        <div class="d-flex align-items-start gap-2">
+          <i class="bi bi-kanban fs-5 text-primary"></i>
+          <div class="flex-grow-1">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="mb-1">專案狀態更新</h6>
+              <small class="text-muted">1 小時前</small>
+            </div>
+            <p class="mb-2 text-muted">客戶滿意度調查 Q3 2024</p>
+            <div class="d-flex align-items-center gap-2 mb-2">
+              <small class="text-muted">進度：67%</small>
+              <div class="progress flex-grow-1" style="height:6px;">
+                <div class="progress-bar" role="progressbar" style="width:67%;"></div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-end">
+              <span class="badge bg-danger-subtle text-danger border">剩餘 3 天</span>
+            </div>
+          </div>
+        </div>
+        <button class="btn btn-sm btn-link text-decoration-none js-mark-read">
+          <i class="bi bi-check2-circle"></i> 標示已讀
+        </button>
+      </article>
+
+      <!-- 3 成功訊息 -->
+      <article class="notif-item type-success">
+        <div class="d-flex align-items-start gap-2">
+          <i class="bi bi-check-circle fs-5"></i>
+          <div class="flex-grow-1">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="mb-1">登錄完成</h6>
+              <small class="text-muted">10 分鐘前</small>
+            </div>
+            <p class="mb-2 text-muted">嘉義會員回覆問卷姓名已更正完成</p>
+          </div>
+        </div>
+        <button class="btn btn-sm btn-link text-decoration-none js-mark-read">
+          <i class="bi bi-check2-circle"></i> 標示已讀
+        </button>
+      </article>
+
+      <!-- 4 資訊訊息 -->
+      <article class="notif-item type-info">
+        <div class="d-flex align-items-start gap-2">
+          <i class="bi bi-info-circle fs-5"></i>
+          <div class="flex-grow-1">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="mb-1">生成完成</h6>
+              <small class="text-muted">5 分鐘前</small>
+            </div>
+            <p class="mb-2 text-muted">產出專案報表《客戶滿意度 Q4 2024》</p>
+          </div>
+        </div>
+        <button class="btn btn-sm btn-link text-decoration-none js-mark-read">
+          <i class="bi bi-check2-circle"></i> 標示已讀
+        </button>
+      </article>
+
+      <!-- 5 提醒（淺黃） -->
+      <article class="notif-item type-warning">
+        <div class="d-flex align-items-start gap-2">
+          <i class="bi bi-exclamation-triangle fs-5"></i>
+          <div class="flex-grow-1">
+            <div class="d-flex justify-content-between align-items-center">
+              <h6 class="mb-1">發送失敗</h6>
+              <small class="text-muted">4 小時前</small>
+            </div>
+            <p class="mb-2 text-muted">EDM 發送異常，請重新排程</p>
+          </div>
+        </div>
+        <button class="btn btn-sm btn-link text-decoration-none js-mark-read">
+          <i class="bi bi-check2-circle"></i> 標示已讀
+        </button>
+      </article>
+    </div>
+
+    <div class="notif-footer p-3">
+      <a href="#" class="btn btn-outline-secondary w-100">查看所有歷史通知</a>
+    </div>
+  </aside>
+
+  <!-- JS：jQuery + Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- 你的 jQuery 腳本 -->
+  <!-- 自己的 jQuery 腳本（見下） -->
   <script src="js/public.js"></script>
 </body>
 </html>
